unpackaged/main/default/objects/sfsp__SalesNodeRuleItem__c/sfsp__SalesNodeRuleItem__c.object-meta.xml
<CustomObject>
    <label>Sales Node Rule Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Node Rule Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>