unpackaged/main/default/objects/sfsp__SalesNodeRuleItem__c/fields/sfsp__Field__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>