unpackaged/main/default/objects/sfsp__SalesNodeRuleItem__c/fields/sfsp__Operator__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>between</fullName>
            </value>
            <value>
                <fullName>like</fullName>
            </value>
            <value>
                <fullName>doesnotcontain</fullName>
            </value>
            <value>
                <fullName>startsWith</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>