unpackaged/main/default/objects/sfsp__SalesNodeRuleItem__c/fields/sfsp__SalesNodeRule__c.field-meta.xml
<CustomField>
    <fullName>sfsp__SalesNodeRule__c</fullName>
    <label>Sales Node Rule</label>
    <referenceTo>sfsp__SalesNodeRule__c</referenceTo>
    <relationshipLabel>Sales Node Rule Items</relationshipLabel>
    <relationshipName>SalesNodeRuleItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>