unpackaged/main/default/objects/sfsp__SalesNodeRuleItem__c/fields/sfsp__Value__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>